--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="br.com.rms.sensorexemple">
+          package="br.com.rms.sensorexample">
 
     <application
             android:allowBackup="true"
@@ -9,10 +9,12 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Main2Activity">
+        </activity>
         <activity android:name=".MainActivity">
         </activity>
         <activity
-                android:name=".Main2Activity"
+                android:name=".Main3Activity"
                 android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
